--- a/style.css
+++ b/style.css
@@ -805,7 +805,7 @@ section:nth-child(2n+1) {
   z-index: 10;
   width: 100%;
   max-width: 1000px;
-  height: 460px;
+  max-height: 560px;
   padding: 50px;
   background: rgba(255, 255, 255, 0.1);
   box-shadow: 0 25px 45px rgba(255, 255, 255, 0.1);
@@ -813,7 +813,7 @@ section:nth-child(2n+1) {
   border-right: 1px solid rgba(255, 255, 255, 0.1);
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   border-radius: 10px;
-  overflow: hidden;
+  /* overflow: hidden; */
   backdrop-filter: blur(15px);
 }
 
@@ -907,13 +907,13 @@ section:nth-child(2n+1) {
 
 .contact-container .row100 .col .inputBox input:focus~.line,
 .contact-container .row100 .col .inputBox input:valid~.line {
-  height: 100%;
+  max-height: 100%;
 }
 
 .contact-container .row100 .col .inputBox .textarea {
   position: relative;
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
   padding: 10px 0;
 }
 
@@ -1007,7 +1007,7 @@ section:nth-child(2n+1) {
   }
 
   .contact-container {
-    padding: 20px;
+    padding: 10px;
   }
 
   .contact-container h2 {
